# rubylicious

./: .gitmodules  CMakeLists.txt  COMPILE-RUBY.md  README.md  b-win.sh  helloworld.c
apidoc/: Demo.md  README.md
arch/linux64/ruby-2.7.0/include/x86_64-linux/ruby/: config.h
arch/win32/ruby-2.7.0/dll/: vcruntime140-ruby270.def
arch/win32/ruby-2.7.0/include/i386-mingw32/ruby/: config.h
arch/win32/ruby-2.7.0/lib/: vcruntime140-ruby270.lib
arch/x86_64-linux/ruby-2.7.0/include/x86_64-linux/: rb_mjit_min_header-2.7.0.h
cmake/: i686-w64-mingw32.cmake  opengl.cmake  ruby.cmake  sdl2.cmake
doc/: CompileRuby.md  Dependencies.md  ideas.txt
rb/: main.rb
scripts/: b-linux.sh  b-win.sh  create-build-files.sh  r-win.sh
src/: RubyAPI.cpp  RubyAPI.h  RubyHelper.cpp  RubyHelper.h  RubyWrapper.h  RubyWrapper.hpp  entrypoint.cpp  helloworld.c  rubylicious.cpp
src/engine/: DemoEngine.cpp  DemoEngine.h
